objects/VoiceofCustomer__c.object
<CustomObject>
    <fields>
        <fullName>CustomerAccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer/ Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Voice of Customers</relationshipLabel>
        <relationshipName>Voice_of_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerRepresentative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Representative</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Voice of Customers</relationshipLabel>
        <relationshipName>Voice_of_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FileAttached__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <label>File Attached</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Voice of Customers</relationshipLabel>
        <relationshipName>Voice_of_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPGlobal_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>S&amp;P Global Representative</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Voice of Customers (S&amp;P Global Representative)</relationshipLabel>
        <relationshipName>VoiceofCustomers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubmissionDate__c</fullName>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <label>Voice of Customer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MyVOC</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My VOC</label>
    </listViews>
    <nameField>
        <displayFormat>VOC-{0000}</displayFormat>
        <label>Voice of Customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voice of Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>